--- a/generic.html
+++ b/generic.html
@@ -50,9 +50,11 @@
 					<footer id="footer">
 						<section>
 							<h2>Easy German</h2>
-							<p> Subscribe to our newsletter to get regular update about our courses. Get latest news in your inbox.</p>
+							<p>Subscribe to our newsletter to get regular update about our courses. Get latest news in your inbox.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">Subscribe</a></li>
+								<div class="email-signup">
+									<input type="email" name="email" placeholder="Enter your email" required>
+									<button type="submit" class="btn"> <a href="Tnx.html">Start Now</a></button>
 							</ul>
 						</section>
 						<section>
