--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 							</section>
 
 						<!-- Second Section -->
-						<section id="course-catalog">
+						<section id="second" class="main special">
+							<header class="major">
 							<h1>Course Catalog</h1>
 							<div class="level-catalog">
 								<div class="level" id="a1">
@@ -122,7 +123,8 @@
 							</div>
 						</section>
 						<!-- Get Started -->
-						<section id="get-started">
+						<section id="cta" class="main special">
+							<header class="major">
 							<div class="container">
 								<h2>Get Started</h2>
 								<p>Begin your German learning adventure today! Just enter your email to get started.</p>
